# CS229-final-project

./: README.md
GNN/: LICENSE  README.md
GNN/3 Layer/: analyze_results.py  best_model.pt  train.py  train_output.txt
GNN/4 Layer/: analyze_4layer_results.py  train_4layer.py  train_output_4layer.txt
LSTM/: train_model copy_lookback_30_dropout_20.ipynb  train_model copy_lookback_30_dropout_20_hidden_384.ipynb  train_model copy_lookback_30_dropout_20_hidden_512.ipynb  train_model copy_lookback_30_dropout_20_hidden_size_256.ipynb  train_model copy_lookback_40_dropout_15_4_layers.ipynb  train_model copy_lookback_40_dropout_15_4_layers_256_hidden.ipynb  train_model copy_lookback_40_dropout_15_weighted_xtopy.ipynb  train_model copy_lookback_40_dropout_20.ipynb  train_model copy_lookback_40_dropout_20_384_hidden.ipynb  train_model copy_lookback_40_dropout_20_4_layers.ipynb  train_model_baseline.ipynb  train_model_focal_loss.ipynb
Transformer/: README.md
Transformer/configs/: offline.toml
Transformer/core/: Cargo.toml
Transformer/core/src/subscription/: mod.rs
Transformer/examples/log_features/: Cargo.toml  README.md
Transformer/examples/serve_ml/: Cargo.toml  README.md
Transformer/examples/serve_ml/src/: main.rs
Transformer/final_models/: model_gentle_unfreeze.ot.additive_bias.json  model_gentle_unfreeze.ot.labels.json  model_gentle_unfreeze.ot.meta.json
Transformer/scripts/: ensemble_and_tempscale.py  make_balanced_subset.py  per_class_additive_bias_opt.py  per_class_bias_eval.py  run_model.py  run_transformer.py  sklearn_head_distill.py  split_jsonl.py
