[package]
name = "log_features"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
clap = { version = "3.1.8", features = ["derive"] }
env_logger = "0.8.3"
jsonl = "4.0.1"
lazy_static = "1.4.0"
log = { version = "0.4", features = ["release_max_level_info"] }
regex = "1.5.4"
retina-core = { path = "../../core", features = [
#  "timing",
  "dur",
  "proto",
  "s_bytes_sum",
  "d_bytes_sum",
  "s_ttl_mean",
  "d_ttl_mean",
  "s_load",
  "d_load",
  "s_pkt_cnt",
  "d_pkt_cnt",
  "s_bytes_mean",
  "d_bytes_mean",
  "s_iat_mean",
  "d_iat_mean",
  "tcp_rtt",
  "syn_ack",
  "ack_dat",
] }
retina-filtergen = { path = "../../filtergen" }
serde_json = "1.0.59"
